--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css?family=Muli:300,400|Merriweather:300,400");
+@import url("https://fonts.googleapis.com/css?family=Muli:300,400,400i|Merriweather:300,400");
