--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -1,9 +1,11 @@
 .article {
   padding-top: 0;
   &__header {
-    display: grid;
-    grid-column: 1 / 8;
-    grid-template-columns: 1fr 1fr 36em 1fr 1fr;
+    @include width-above($tablet) {
+      display: grid;
+      grid-column: 1 / 8;
+      grid-template-columns: 1fr 1fr 36em 1fr 1fr;
+    }
 
     background-position: bottom left;
     background-repeat: no-repeat;
@@ -14,10 +16,14 @@
       $padding: 4 0 3 0,
       $margin-bottom: 1
     );
+
     h1 {
       grid-column: 3;
-      margin: 0;
-      padding: 0;
+      padding: 0 !important;
+      margin: 0 1.5rem;
+      @include width-above($tablet) {
+        margin: 0;
+      }
       span {
         display: inline;
         background: #fff;
@@ -28,7 +34,10 @@
         background-color: #fff;
         box-shadow: 1rem 0 0 #fff, -1rem 0 0 #fff;
         box-decoration-break: clone;
-        line-height: 1.525 !important;
+        line-height: 1.7 !important;
+        @include width-above($tablet) {
+          line-height: 1.525 !important;
+        }
       }
     }
   }
@@ -40,17 +49,25 @@
 
   &__meta {
     color: lighten($text-color, 35);
-    // font-size: 0.85em;
-    // line-height: 1.5;
   }
 
   .article__grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 36em 1fr 1fr;
     p, ul, h1, h2, h3, h4, h5 {
-      grid-column: 3;
-      margin-top: 0;
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
     }
+    @include width-above($tablet) {
+      display: grid;
+      grid-template-columns: 1fr 1fr 36em 1fr 1fr;
+
+      p, ul, h1, h2, h3, h4, h5 {
+        grid-column: 3;
+        margin-top: 0;
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+    
 
     h3 {
       @include vr(
@@ -79,13 +96,17 @@
   }
 
   &__figure {
-    padding: 0;
+    padding: 0 1.5rem;
+    @include width-above($tablet) {
+      padding: 0;
+    }
     margin: 0;
     grid-column: 3;
     @include vr(
       $margin-bottom: 1.5
     );
     &.is-wide {
+      padding: 0;
       grid-column: 2 / 5;
     }
     &.is-full-width {
@@ -100,9 +121,19 @@
   }
 
   .article_images {
-    grid-column: 2 / -2;
-    column-count: 3;
-    column-gap: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    @include width-above($phablet) {
+      column-gap: 1rem;
+      column-count: 2;
+    }
+    @include width-above($tablet) {
+      padding: 0;
+      grid-column: 2 / -2;
+      column-count: 3;
+      column-gap: 1rem;
+    }
+
     @include vr(
       $margin-bottom: 2
     );
