:zap: Tweaks to backup case study content + style

--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -12,15 +12,18 @@
     background-size: cover;
     background-attachment: fixed;
     box-shadow: 0 -1px 1px -1px rgba(#000, 0.5);
-
     @include vr(
-      $padding: 4 0 3 0,
+      $padding: 3 0 2 0,
       $margin-bottom: 1
     );
+    @include width-above($phablet) {
+      @include vr(
+        $padding: 4 0 3 0
+      );
+    }
     @include width-above($desktop) {
       @include vr(
-        $padding: 5 0 4 0,
-        $margin-bottom: 1
+        $padding: 6 0 4 0
       );
     }
 
