--- a/src/app.scss
+++ b/src/app.scss
@@ -188,26 +188,6 @@ h1, h2, h3, h4, h5 {
     color: #fff;
   }
 
-  &:before,
-  &:after {
-    content: '';
-    width: 0;
-    height: 100%;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    z-index: -1;
-    @extend .animateButton;
-    background-color: saturate($orange, 0);
-  }
-  
-  &:before {
-    left: 50%;
-  }
-  
-  &:after {
-    right: 50%;
-  }
   @media (hover) {
     &:hover {
       border-color: saturate($orange, 0);
@@ -215,12 +195,6 @@ h1, h2, h3, h4, h5 {
       border-left-color: lighten($orange, 10);
       color: #fff;
       box-shadow: 3px 3px 10px 0px rgba(#000, 0.2);
-
-      &:before,
-      &:after {
-        width: 52%;
-        opacity: 1;
-      }
     }
   }
 }
@@ -293,6 +267,8 @@ h1, h2, h3, h4, h5 {
   .resume__document {
     padding-left: 1.5rem !important;
     padding-right: 1.5rem !important;
+    padding-top: 2rem;
+    padding-bottom: 0;
     border-top: 8px solid $orange;
     box-shadow: none !important;
   }
