:sparkles: Add EE project and update resume

--- a/src/app.scss
+++ b/src/app.scss
@@ -123,6 +123,9 @@ section {
       $offset-top: 1px
     );
   }
+  &.ee {
+    background: #345fcf url('/assets/images/80-70-4.png');
+  }
 }
 
 a {
