--- a/src/app.scss
+++ b/src/app.scss
@@ -323,6 +323,7 @@ h1, h2, h3, h4, h5 {
   .grid-wrapper {
     padding-left: 0 !important;
     padding-right: 0 !important;
+    margin: 0;
   }
   .resume__document {
     padding-left: 1.5rem !important;
