--- a/src/app.scss
+++ b/src/app.scss
@@ -294,6 +294,7 @@ h1, h2, h3, h4, h5 {
     margin: 0 !important;
     padding: 0 !important;
     background: #fff !important;
+    width: 1044px;
   }
 
   .resume h3 {
