--- a/src/styles/_resume.scss
+++ b/src/styles/_resume.scss
@@ -70,9 +70,10 @@
     }
 
     &.isProfile {
-      // max-width: 8em;
-      // min-width: 8em;
-      padding: 1em 0 0 5em;
+      padding: 1em 0 0 0;
+      min-width: 10em;
+      display: flex;
+      justify-content: flex-end;
       figure {
         width: 6em;
         height: 6em;
@@ -96,6 +97,10 @@
       text-align: left;
       &.isDates {
         max-width: none;
+      }
+
+      &.isProfile {
+        justify-content: flex-start;
       }
     }
   }
